--- a/67250_webdevlabs/maxwell2-lab1/views/cv.html
+++ b/67250_webdevlabs/maxwell2-lab1/views/cv.html
@@ -13,12 +13,22 @@
     <header>
         <h1>Maxwell Huang</h1>
     </header>
-
-    <main class="main">
-        <h2 style="color:blue; background:lightblue">Hi, my name is Maxwell!</h2>
-        <img src="static/profile-image.jpg" alt="My Profile Picture">
-        <p id="intro">Welcome to my personal website where you can learn more about me, my background, and interests.</p>
-    </main>
+    <h2 style="color:blue; background:lightblue">Curriculum Vitae</h2>
+        
+    <!-- CV Table -->
+    <table border="1">
+        <tr>
+            <th>Maxwell Huang</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>Education</td>
+            <td>Carnegie Mellon University BS Information Systems</td>
+        </tr>
+    </table>
+    
+    <!-- Link to Resume PDF -->
+    <p>Download my complete <a href="67250_webdevlabs/maxwell2-lab1/static/Maxwell Huang - Final Resume (3).pdf">resume</a>.</p>
 
     <nav>
         <ul>
