--- a/67250_webdevlabs/maxwell2-lab1/views/fun.html
+++ b/67250_webdevlabs/maxwell2-lab1/views/fun.html
@@ -10,14 +10,16 @@
 </head>
 <body style="font-family: Arial">
 
-    <header>
-        <h1>Maxwell Huang</h1>
-    </header>
-
     <main class="main">
-        <h2 style="color:blue; background:lightblue">Hi, my name is Maxwell!</h2>
-        <img src="static/profile-image.jpg" alt="My Profile Picture">
-        <p id="intro">Welcome to my personal website where you can learn more about me, my background, and interests.</p>
+        <h2 style="color:blue; background:lightblue">Things I love to do for fun</h2>
+        
+        <!-- List of Favorite Activities -->
+        <ul>
+            <li>Hiking</li>
+            <li>Cooking</li>
+            <li>Playing tennis and basketball</li>
+            <li>Camping</li>
+        </ul>
     </main>
 
     <nav>
