--- a/67250_webdevlabs/maxwell2-lab1/views/cv.html
+++ b/67250_webdevlabs/maxwell2-lab1/views/cv.html
@@ -28,14 +28,14 @@
     </table>
     
     <!-- Link to Resume PDF -->
-    <p>Download my complete <a href="67250_webdevlabs/maxwell2-lab1/static/Maxwell Huang - Final Resume (3).pdf">resume</a>.</p>
+    <p>Download my complete <a href="../static/Maxwell%20Huang%20-%20Final%20Resume%20(3).pdf">resume</a>.</p>
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="views/cv.html">CV</a></li>
-            <li><a href="views/contact.html">Contact me</a></li>
-            <li><a href="views/fun.html">For fun</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="cv.html">CV</a></li>
+            <li><a href="contact.html">Contact me</a></li>
+            <li><a href="fun.html">For fun</a></li>
         </ul>
     </nav>
 
