--- a/67250_webdevlabs/maxwell2-lab1/views/fun.html
+++ b/67250_webdevlabs/maxwell2-lab1/views/fun.html
@@ -24,10 +24,10 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="views/cv.html">CV</a></li>
-            <li><a href="views/contact.html">Contact me</a></li>
-            <li><a href="views/fun.html">For fun</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="cv.html">CV</a></li>
+            <li><a href="contact.html">Contact me</a></li>
+            <li><a href="fun.html">For fun</a></li>
         </ul>
     </nav>
 
