--- a/67250_webdevlabs/maxwell2-lab2/views/cv.html
+++ b/67250_webdevlabs/maxwell2-lab2/views/cv.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +14,7 @@
 <body style="font-family: Arial">
 
     <header>
-        <h1>Maxwell Huang</h1>
+        <h1 id="webname">Maxwell Huang</h1>
     </header>
     <h2 style="color:blue; background:lightblue">Curriculum Vitae</h2>
         
