--- a/67250_webdevlabs/maxwell2-lab2/static/style.css
+++ b/67250_webdevlabs/maxwell2-lab2/static/style.css
@@ -1,5 +1,19 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+*{   
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100; 
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
     padding: 5px;
     margin: 5px;
+}
+#webname {
+    background-color: #00533f;
+}
+
+nav a {
+    text-decoration: none;
+    color: #333;
+    margin-right: 15px;
 }
