--- a/67250_webdevlabs/maxwell2-lab2/views/fun.html
+++ b/67250_webdevlabs/maxwell2-lab2/views/fun.html
@@ -12,10 +12,22 @@
     <meta name="description" content="Maxwell Huang">
     <title>Maxwell Huang</title>
 </head>
+
 <body style="font-family: Arial">
 
     <main class="main">
-        <h2 style="color:blue; background:lightblue">Things I love to do for fun</h2>
+        <header>
+            <h1 id="webname">Maxwell Huang</h1>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="cv.html">CV</a></li>
+                    <li><a href="contact.html">Contact me</a></li>
+                    <li><a href="fun.html">For fun</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h2 style="color:grey; background:white">Things I love to do for fun</h2>
         
         <!-- List of Favorite Activities -->
         <ul>
@@ -26,17 +38,10 @@
         </ul>
     </main>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="contact.html">Contact me</a></li>
-            <li><a href="fun.html">For fun</a></li>
-        </ul>
-    </nav>
+   
 
     <footer>
-        <p>&copy; 2025 Maxwell Huang. All rights reserved.</p>
+        <p>&copy; Created and Designed by Maxwell Huang :D</p>
     </footer>
 
 </body>
