--- a/67250_webdevlabs/maxwell2-lab2/views/contact.html
+++ b/67250_webdevlabs/maxwell2-lab2/views/contact.html
@@ -15,10 +15,18 @@
 
     <header>
         <h1 id="webname">Maxwell Huang</h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="contact.html">Contact me</a></li>
+                <li><a href="fun.html">For fun</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main class="main">
-        <h2 style="color:blue; background:lightblue">Contact Me</h2>
+        <h2 style="color:grey; background:white">Contact Me</h2>
         
         <!-- Contact Form -->
         <form action="#" method="post">
@@ -58,17 +66,10 @@
         </table>
     </main>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="contact.html">Contact me</a></li>
-            <li><a href="fun.html">For fun</a></li>
-        </ul>
-    </nav>
+    
 
     <footer>
-        <p>&copy; 2025 Maxwell Huang. All rights reserved.</p>
+        <p>&copy; Created and Designed by Maxwell Huang :D</p>
     </footer>
 
 </body>
