--- a/67250_webdevlabs/maxwell2-lab2/views/cv.html
+++ b/67250_webdevlabs/maxwell2-lab2/views/cv.html
@@ -15,8 +15,16 @@
 
     <header>
         <h1 id="webname">Maxwell Huang</h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="contact.html">Contact me</a></li>
+                <li><a href="fun.html">For fun</a></li>
+            </ul>
+        </nav>
     </header>
-    <h2 style="color:blue; background:lightblue">Curriculum Vitae</h2>
+    <h2 style="color:grey; background:white">Curriculum Vitae</h2>
         
     <!-- CV Table -->
     <table border="1">
@@ -26,24 +34,22 @@
         </tr>
         <tr>
             <td>Education</td>
-            <td>Carnegie Mellon University BS Information Systems</td>
+            <td>Carnegie Mellon University, BS Information Systems 2024-</td>
         </tr>
+        <tr>
+            <td></td>
+            <td>Monte Vista High School 2020-2024</td>
+        </tr>
+
     </table>
     
     <!-- Link to Resume PDF -->
     <p>Download my complete <a href="../static/Maxwell%20Huang%20-%20Final%20Resume%20(3).pdf">resume</a>.</p>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="contact.html">Contact me</a></li>
-            <li><a href="fun.html">For fun</a></li>
-        </ul>
-    </nav>
+    
 
     <footer>
-        <p>&copy; 2025 Maxwell Huang. All rights reserved.</p>
+        <p>&copy; Created and Designed by Maxwell Huang :D</p>
     </footer>
 
 </body>
