--- a/67250_webdevlabs/maxwell2-lab3/views/cv.html
+++ b/67250_webdevlabs/maxwell2-lab3/views/cv.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/style.css">
+    <script src="../static/script.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Maxwell Huang">
@@ -45,8 +46,6 @@
     
     <!-- Link to Resume PDF -->
     <p>Download my complete <a href="../static/Maxwell%20Huang%20-%20Final%20Resume%20(3).pdf">resume</a>.</p>
-
-    
 
     <footer>
         <p>&copy; Created and Designed by Maxwell Huang :D</p>
