--- a/67250_webdevlabs/maxwell2-lab4/views/cv.html
+++ b/67250_webdevlabs/maxwell2-lab4/views/cv.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/style.css">
@@ -14,32 +13,37 @@
     <meta name="description" content="Maxwell Huang">
     <title>Maxwell Huang</title>
 </head>
-
 <body onload="addYear()">
 
-    <main class="main">
-        <header>
-            <h1 id="webname">Maxwell Huang</h1>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="cv.html">CV</a></li>
-                    <li><a href="contact.html">Contact me</a></li>
-                    <li><a href="fun.html">For fun</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h2 style="color:grey; background:white">Things I love to do for fun</h2>
+    <header>
+        <h1 id="webname">Maxwell Huang</h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="contact.html">Contact me</a></li>
+                <li><a href="fun.html">For fun</a></li>
+            </ul>
+        </nav>
+    </header>
+    <h2 style="color:grey; background:white">Curriculum Vitae</h2>
         
-        <button onclick="showList()">Click to see...</button>
-        
-        <ul style="display: none;">
-            <li>Hiking</li>
-            <li>Cooking</li>
-            <li>Playing tennis and basketball</li>
-            <li>Camping</li>
-        </ul>
-    </main>
+    <table border="1">
+        <tr>
+            <th>Maxwell Huang</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>Education</td>
+            <td>Carnegie Mellon University, BS Information Systems 2024-</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>Monte Vista High School 2020-2024</td>
+        </tr>
+    </table>
+    
+    <p>Download my complete <a href="../static/Maxwell%20Huang%20-%20Final%20Resume%20(3).pdf">resume</a>.</p>
 
     <footer>
         <p><span id="copyYear"></span> Created and Designed by Maxwell Huang :D</p>
